crates/ty_server/tests/e2e/snapshots/e2e__publish_diagnostics__full_diagnostic_output.snap
---
source: crates/ty_server/tests/e2e/publish_diagnostics.rs
expression: diagnostics
---
PublishDiagnosticsParams {
    uri: Url {
        scheme: "file",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: None,
        port: None,
        path: "<temp_dir>/src/foo.py",
        query: None,
        fragment: None,
    },
    version: Some(
        1,
    ),
    diagnostics: [
        Diagnostic {
            range: Range {
                start: Position {
                    line: 1,
                    character: 11,
                },
                end: Position {
                    line: 1,
                    character: 13,
                },
            },
            severity: Some(
                Error,
            ),
            code: Some(
                String(
                    "invalid-return-type",
                ),
            ),
            code_description: Some(
                CodeDescription {
                    href: Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "ty.dev",
                            ),
                        ),
                        port: None,
                        path: "/rules",
                        query: None,
                        fragment: Some(
                            "invalid-return-type",
                        ),
                    },
                },
            ),
            source: Some(
                "ty",
            ),
            message: String(
                "Return type does not match returned value: expected `str`, found `Literal[42]`",
            ),
            tags: None,
            related_information: None,
            data: Some(
                Object {
                    "diagnostic_id": String("invalid-return-type"),
                    "rendered": String("error[invalid-return-type]: Return type does not match returned value\n --> src/foo.py:1:14\n  |\n1 | def foo() -> str:\n  |              --- Expected `str` because of return type\n2 |     return 42\n  |            ^^ expected `str`, found `Literal[42]`\n  |\n\n"),
                },
            ),
        },
    ],
}
