crates/ty_server/tests/e2e/snapshots/e2e__publish_diagnostics__invalid_syntax_with_syntax_errors_disabled.snap
---
source: crates/ty_server/tests/e2e/publish_diagnostics.rs
expression: diagnostics
---
PublishDiagnosticsParams {
    uri: Url {
        scheme: "file",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: None,
        port: None,
        path: "<temp_dir>/src/foo.py",
        query: None,
        fragment: None,
    },
    version: Some(
        1,
    ),
    diagnostics: [],
}
