crates/ty_server/tests/e2e/snapshots/e2e__publish_diagnostics__on_did_change_invalid_script_metadata_restores_semantic_diagnostics.snap
---
source: crates/ty_server/tests/e2e/publish_diagnostics.rs
expression: initial
---
PublishDiagnosticsParams {
    uri: Url {
        scheme: "file",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: None,
        port: None,
        path: "<temp_dir>/src/script.py",
        query: None,
        fragment: None,
    },
    version: Some(
        1,
    ),
    diagnostics: [
        Diagnostic {
            range: Range {
                start: Position {
                    line: 1,
                    character: 19,
                },
                end: Position {
                    line: 1,
                    character: 19,
                },
            },
            severity: Some(
                Error,
            ),
            code: Some(
                String(
                    "invalid-script-metadata",
                ),
            ),
            code_description: None,
            source: Some(
                "ty",
            ),
            message: String(
                "string values must be quoted, expected literal string",
            ),
            tags: None,
            related_information: None,
            data: None,
        },
    ],
}
