crates/ty_server/tests/e2e/snapshots/e2e__publish_diagnostics__on_did_change_nested_invalid_tuple_assignment_target_does_not_panic.snap
---
source: crates/ty_server/tests/e2e/publish_diagnostics.rs
expression: diagnostics
---
PublishDiagnosticsParams {
    uri: Url {
        scheme: "file",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: None,
        port: None,
        path: "<temp_dir>/src/foo.py",
        query: None,
        fragment: None,
    },
    version: Some(
        2,
    ),
    diagnostics: [
        Diagnostic {
            range: Range {
                start: Position {
                    line: 0,
                    character: 11,
                },
                end: Position {
                    line: 0,
                    character: 16,
                },
            },
            severity: Some(
                Error,
            ),
            code: Some(
                String(
                    "invalid-syntax",
                ),
            ),
            code_description: None,
            source: Some(
                "ty",
            ),
            message: String(
                "Invalid assignment target",
            ),
            tags: None,
            related_information: None,
            data: None,
        },
    ],
}
